# daschat_base

./: 404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  api.html  authors.html  contributing.html  history.html  index.html  installation.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
daschat_base/: __init__.py  dc_abc_channel.py  dc_abc_handoff.py  messages.py  schemas.py  types.py  version.py
daschat_base/base_schemas/: __init__.py  slots.py
daschat_handsoff_base/: __init__.py  daschat_handsoff_base.py  dc_abc_handoff.py  schemas.py
docs/: api.md  installation.md  usage.md
history/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_daschat_channel_base.py  test_daschat_handsoff_base.py  test_daschat_messages.py
usage/: index.html
