[tool]
[tool.poetry]
name = "daschat_base"
version = "0.11.0"
homepage = "https://github.com/daschat-io/daschat_base"
description = "Base package for Daschat modules."
authors = ["Abner G Jacobsen <abner@apoana.com.br>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [{ include = "daschat_base" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

pydantic = "^1.8.2"
cuid = "^0.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

# Docs
mkdocs-autorefs = "0.1.1"
mkdocs = "^1.1.2"
mkdocs-include-markdown-plugin = "^1.0.0"
mkdocs-material = "^6.1.7"
mkdocs-material-extensions = "^1.0.1"
mkdocstrings = "^0.15.2"

# Dev/Test tools
black = "20.8b1"
isort = "5.6.4"
flake8 = "3.8.4"
flake8-docstrings = "^1.6.0"
pytest = "6.1.2"
pytest-cov = "2.10.1"
tox = "^3.20.1"
virtualenv = "^20.2.2"
pip = "^20.3.1"
twine = "^3.3.0"
pre-commit = "^2.12.0"
toml = "^0.10.2"
tox-poetry-dev-dependencies = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
